tests/support/validation/invalid/overlapping_cal_exception/blocks.blk
VSC;htn20016;Saturday  ; 5;02;BUS22020  ;BenTT   ;North Cambridge Saturday Spring 2020 REMAKE                                     
BLK;    N73-5;   4220699;6      ;ncamb ;0429a;ncsta ;0434a;ncsta ;0120x;ncamb ;0120x;4YE_;    ;        ;016;;
TIN;  43593417
VSC;hbc20016;Saturday  ; 5;02;BUS22020  ;Cabot   ;Cabot Saturday Remake Blocks                                                    
BLK;    C01-1;   4236059;6      ;cabot ;0251a;matpn ;0320a;dudly ;0720p;cabot ;0730p;    ;    ;        ;016;;
TIN;  43767804
VSC;hbt20a36;Saturday  ; 5;02;BUS22020  ;Somvl   ;Somerville Saturday - Harvard Tunnel Detour + 71/73 (Remake Blocks)             
BLK;   T77-37;   4315289;6      ;somvl ;0423a;arlht ;0448a;bally ;0940p;somvl ;0958p;    ;    ;        ;a36;;
TIN;  44563250
